# practice_project

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
app/: main.py
app/common/: connect.py  env.py  exception.py  utils.py
app/controller/: food.py  tip.py
app/model/: food.py  tip.py
app/router/: api.py  food.py  tip.py
